syntax = "proto3";

package signer;

option go_package = "github.com/ava-labs/avalanchego/proto/pb/signer";

service Signer {
  rpc PublicKey(PublicKeyRequest) returns (PublicKeyResponse) {}
  rpc Sign(SignRequest) returns (SignResponse) {}
  rpc SignProofOfPossession(SignProofOfPossessionRequest) returns (SignProofOfPossessionResponse) {}
}

message PublicKeyRequest {}
message PublicKeyResponse {
  bytes public_key = 1;
}
message SignRequest {
  bytes message = 1;
}
message SignResponse {
  bytes signature = 1;
}
message SignProofOfPossessionRequest {
  bytes message = 1;
}
message SignProofOfPossessionResponse {
  bytes signature = 1;
}
